--- a/scss/layouts.scss/_header.scss
+++ b/scss/layouts.scss/_header.scss
@@ -4,45 +4,47 @@ header {
       margin-bottom: 1rem;
       width: 70px;
       height: 70px;
-      margin-left: 60px;
-      margin-right: 300px;
+      margin-left: 20px;
     }
-    .navbar-nav {
-      justify-content: center;
-      text-align: center;
-      color: #6e7051;
-      .nav-item {
-        a {
-          display: inline-block;
-          margin-left: 40px;
-          text-align: center;
-          text-decoration: none;
-          color: inherit;
-          padding: 15px;
-          font-family: 'Roboto', sans-serif;
-          position: relative;
-          color: #6e7051;
-          font-size: 18px;
-          &::after {
-            content: "";
-            width: 0;
-            height: 3px;
-            background-color: #6e7051;
-            position: absolute;
-            bottom: 0;
-            right: 50%;
-            transition: all 0.5s;
-            will-change: width;
-            margin-left: 10px;
-          }
-          &:hover::after {
-            width: 100%;
-            right: 0;
+    .navbar-collapse{
+      .navbar-nav {
+        justify-content: center;
+        text-align: center;
+        color: #6e7051;
+        .nav-item {
+          a {
+            display: inline-block;
+            margin-left: 40px;
+            text-align: center;
+            text-decoration: none;
+            color: inherit;
+            padding: 15px;
+            font-family: 'Roboto', sans-serif;
+            position: relative;
+            color: #6e7051;
+            font-size: 18px;
+            &::after {
+              content: "";
+              width: 0;
+              height: 3px;
+              background-color: #6e7051;
+              position: absolute;
+              bottom: 0;
+              right: 50%;
+              transition: all 0.5s;
+              will-change: width;
+              margin-left: 10px;
+            }
+            &:hover::after {
+              width: 100%;
+              right: 0;
+            }
           }
         }
       }
     }
-  }
+    }
+    
 
   @media (max-width: 800px) {
     .logo {
@@ -50,15 +52,10 @@ header {
     }
   }
 
-  @media (max-width: 400px) {
-    .logo {
-        width:200%; 
-        margin-left: 10px;
-    }
-  }
 
-  @media (max-width: 400px) {
-    .container-fluid {
-        flex-direction: column; 
+
+  @media (max-width: 350px) {
+    .logo{
+      width: 100%;
     }
-  }
+}
