--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -5,3 +5,16 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+@mixin boton{
+    font-size: 14px;
+                            background: rgba(132, 132, 132, 0.872);
+                            border-color: rgba(83, 83, 69, 0.872);
+                            color: #fff;
+                            width: 100px;
+                            height: 50px;
+                            border-radius: 5;
+                        &:hover {
+                            background-color: rgba(50, 50, 40, 0.872);
+                            }
+}
