--- a/scss/views/_reservas.scss
+++ b/scss/views/_reservas.scss
@@ -25,22 +25,13 @@
                         font-size: 18px;
                         }
                         .boton-reserva{
-                            font-size: 14px;
-                            background: rgba(132, 132, 132, 0.872);
-                            border-color: rgba(83, 83, 69, 0.872);
-                            color: #fff;
-                            width: 100px;
-                            height: 50px;
-                            border-radius: 5;
-                        &:hover {
-                            background-color: rgba(50, 50, 40, 0.872);
-                            }
+                            @include boton
                         }
-                }
                 
             }
         }
     }
+}
 
 
 .section2-reservas{
