--- a/scss/layouts.scss/_header.scss
+++ b/scss/layouts.scss/_header.scss
@@ -10,7 +10,8 @@ header {
       .navbar-nav {
         justify-content: center;
         text-align: center;
-        color: #6e7051;
+        color: #6e7051; 
+        margin-left: 20px;
         .nav-item {
           a {
             display: inline-block;
