--- a/scss/views/_experiencias.scss
+++ b/scss/views/_experiencias.scss
@@ -11,8 +11,7 @@
 
 
 #articulos{
-    display: flex;
-    justify-content: center;
+    @include flex;
     gap: 2rem;
     max-width: 1200px;
     margin: 0 auto;
