--- a/scss/views/_galeria.scss
+++ b/scss/views/_galeria.scss
@@ -6,35 +6,39 @@
 }
 #galeria {
     @include flex;
-    padding: 10px;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 1rem;
+    margin-top: 3rem;
     flex-wrap: wrap;
     padding: 0 1rem;
+    margin-bottom: 5rem;
     margin-bottom: 3rem;
+    align-items: baseline;
     .art-galeria {
         display: flex;
-        flex: 25%;
+        flex-wrap: wrap;
         flex-direction: column;
+        flex: 50%;
+        align-items: center;
         padding: 5px;
         gap: 10px;
         align-items: center;
+        flex: 1 1 clamp(300px, 40%, 400px);
         .art__img {
             margin-top: 5px;
-            width: 100%;
+            width: 150%;
         }
     }
 }
 
-    @media (max-width: 800px) {
+@media (max-width: 350px) {
     .art-galeria {
-        flex: 50%;
+    flex-direction: column;
+    align-items: center;
     }
-}
-    @media (max-width: 600px) {
-    .art-galeria {
-        flex: 100%;
-        flex-wrap: wrap;
+
+    .art__img {
+    flex: none;
+    width: 100%;
     }
 }
